[package]
name = "smithay-egui-drm"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Bare-metal egui integration for Raspberry Pi with DRM/KMS"

[dependencies]
egui = "0.24"
egui_glow = "0.24"
log = "0.4"
anyhow = "1.0"

# DRM/KMS dependencies
drm = "0.11"
drm-fourcc = "0.4"
gbm = "0.14"
egl = "0.5"
glow = "0.13"

# Input handling
libc = "0.2"
nix = "0.27"

# tslib for touch input
tslib = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
udev = "0.9"

[features]
default = ["default_fonts"]
default_fonts = ["egui/default_fonts"]
